--- a/test/hust/tpl.html
+++ b/test/hust/tpl.html
@@ -6,7 +6,7 @@
 
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>hust_小C的模版引擎</title>
-        <script src="../../py/hust/Template.js" type="text/javascript"></script>
+        <script src="../../py/TASK/hust/Template.js" type="text/javascript"></script>
 		
       
     </head>
