--- a/trunk/ui/control/control.html
+++ b/trunk/ui/control/control.html
@@ -5,6 +5,7 @@
 		<title>控件生成</title>
 		<script src="../../py/system.js" type="text/javascript"></script>
 		<script src="../../py/system/dom/element.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/control.js" type="text/javascript"></script>
 		
 		<script src="../../common/project/project.js" type="text/javascript"></script>
 		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
