--- a/ui/control/splitter.html
+++ b/ui/control/splitter.html
@@ -10,6 +10,7 @@
         
         <script src="../../py/system.js" type="text/javascript"></script>
 		<script src="../../py/system/dom/element.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/control.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/surround.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/resizing.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/splitter.js" type="text/javascript"></script>
