--- a/ui/container/accordion.html
+++ b/ui/container/accordion.html
@@ -15,7 +15,6 @@
 		<script src="../../py/system/controls/resizing.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/layout/layoutengine.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/layout/advancelayout.js" type="text/javascript"></script>
-		<script src="../../py/system/controls/layout/accordionlayout.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/accordion.js" type="text/javascript"></script>
 		
 		<script src="../../common/project/project.js" type="text/javascript"></script>
@@ -24,12 +23,16 @@
 		
 		<script>
 			
-			
+			Py.ready(function(){
+				new Accordion({
+					id:'accordion'
+				})
+			})
 			
 		</script>
     </head>
     <body>
-		<div style="width: 300px; float: left; margin: 5px;" class="x-accordion">
+		<div style="width: 300px; float: left; margin: 5px;" class="x-accordion" id="accordion">
 			<div class="x-header x-accordion-header">
 				<h3 class="">面板1</h3>
 			</div>
