--- a/trunk/ui/container/panel.html
+++ b/trunk/ui/container/panel.html
@@ -114,7 +114,7 @@
 			
 			
 				panel = new Panel({
-					title: '标题',
+					title: '控制面板标题',
 					html: '<div><u>内容</u></div>',
 					size: {x:333,y:232},
 					renderTo: document.body,
