--- a/test/dom/iframe.html
+++ b/test/dom/iframe.html
@@ -5,7 +5,7 @@
 		<title>System.Dom.Element  测试</title>
 		<script src="../../py/system.js" type="text/javascript"></script>
 		<script src="../../py/System/Dom/Element.js" type="text/javascript"></script>
-		<script src="../../py/System/Dom/IFrame.js" type="text/javascript"></script>
+		<script src="../../py/System/Dom/iframe.js" type="text/javascript"></script>
 		
 		<script src="../../common/project/project.js" type="text/javascript"></script>
 		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
@@ -14,7 +14,7 @@
 	<body> 
 		<iframe id="w" src="../tools/javascript.html"></iframe>
 		<script>
-var iframe = new IFrame("w");
+        var iframe = new IFrame("w");
 		iframe.ready(function(){
 				log(this.window.document.title);
 		});
