--- a/ui/container/accordion.html
+++ b/ui/container/accordion.html
@@ -10,6 +10,8 @@
        
 	   	<script src="../../py/system.js" type="text/javascript"></script>
 		<script src="../../py/system/dom/element.js" type="text/javascript"></script>
+		<script src="../../py/system/fx/base.js" type="text/javascript"></script>
+		<script src="../../py/system/fx/animate.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/control.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/surround.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/resizing.js" type="text/javascript"></script>
