--- a/trunk/test/core/py.html
+++ b/trunk/test/core/py.html
@@ -14,11 +14,11 @@
 			var fns = [
 				["Py.Native", function(){ return Py.Native(Function); }],
 				["Py.eval", function(){ return Py.eval("alert('a')"); }],
+				["Py.addCss", function(){ return Py.addCss("body{color: red}"); }],
 				["Py.data", function(){ return Py.data({},"s"); }, true],
 				["Py.dataIf", function(){ return Py.dataIf({},"s"); }, undefined],
 				["Py.setData", function(){ return Py.setData({},"s", 1); }, 1],
 				["Py.rootPath", function(){ return Py.rootPath; }],
-				["Py.ready", function(){ return ready(function(){log("完成 -> ready")}); }],
 				["Py.addEventListener", function(){document.addEventListener('dblclick', log, false);}],
 				["Py.removeEventListener", function(){document.removeEventListener('dblclick', log, false);}]
 			];
