--- a/trunk/test/core/ready.html
+++ b/trunk/test/core/ready.html
@@ -12,7 +12,7 @@
 	<body>
 		<script>
 			onload = function(){log('完成 -> load')};
-			ready(function(){    log("完成 -> ready");   });
+			document.ready(function(){    log("完成 -> ready");   });
 		</script>
 		<img src="http://404.com">
 	</body>
