--- a/test/core/native.html
+++ b/test/core/native.html
@@ -4,8 +4,9 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Pyjs 测试</title>
 		<script src="../../py/system.js" type="text/javascript"></script>
-		<script src="../../py/System/Core/Native.js" type="text/javascript"></script>
-		<script src="../../py/System/Core/Function.js" type="text/javascript"></script>
+		<script src="../../py/system/core/native.js" type="text/javascript"></script>
+		<script src="../../py/system/core/function.js" type="text/javascript"></script>
+		
 		<script src="../../common/project/project.js" type="text/javascript"></script>
 		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
 		<script src="../../common/assets/scripts/debug.js" type="text/javascript"></script>
