--- a/test/core/object.html
+++ b/test/core/object.html
@@ -20,9 +20,27 @@
 				["Object.isObject", function(){ return Object.isObject({"a":"g"});  }, true],
 				["Object.isArray", function(){ return Object.isArray({"a":"g"});  }, false],
 				["Object.isFunction", function(){ return Object.isFunction({"a":"g"}, false);  }],
-				["Object.value", function(){return Object.value("Object.isArray");   }, function(r){assert(Object.isFunction(r));}],
 				["Object.each", function(){ return Object.each({"a":"g"}, log);  }, true],
 				["Object.update", function(){return Object.update({"a":"g"}, "length");   }, function(r){assert(r['a'] === 1)}],
+				["Object.set", function(){ 
+					var MYCLASS = new Class({
+						types : [],
+						setA: log,
+						constructor: function(args){
+							Object.set(this, args);
+							log(this.types);
+							assert(this.types.length == 1);
+						}
+					});
+					
+					var instance = new MYCLASS({a: 's', types:[2]});
+				}],
+				["Object.addCallback", function(){ 
+					var a = {click: function(){log(1);}}, flag = false;
+					Object.addCallback(a, 'click',function(){flag = true, log(2);} );
+					a.click();
+					assert(flag);
+				}],
 				'String',
 				["String.map", function(){ return String.map("a b c", function(a){return a + '.';}, {}); }, function(r){assert(r['a'] === 'a.')}],
 				["String.format", function(){ return String.format("{0}", 3); }, '3'],
@@ -49,7 +67,7 @@
 				["String.prototype.toCamelCase", function(){ return "font-size".toCamelCase(); }, "fontSize"],
 				["String.prototype.capitalize", function(){ return "sdsd".capitalize(); }, 'Sdsd'],
 				'XMLHttpRequest',
-				["XMLHttpRequest.isOk", function(){return XMLHttpRequest.isOk({});}, false]
+				["XMLHttpRequest.isOk", function(){return XMLHttpRequest.isOk({open: 5});}, false]
 			];
 		
 		</script>
