--- a/trunk/test/dom/nodes.html
+++ b/trunk/test/dom/nodes.html
@@ -22,7 +22,7 @@
 			</div>
 			<hr>
 		<script>
-			trace(document.getElements('a').get('child', 'div').get('parent'));
+			trace(document.id('a').get('child', 'div').get('parent'));
 			var fns = [
 				['findAll', function(){
 					return  document.findAll('.a.b');
