--- a/test/core/classex.html
+++ b/test/core/classex.html
@@ -2,11 +2,10 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>System.Algorithm.Encryption.Md5  测试</title>
+		<title>Pyjs 测试</title>
 		<script src="../../py/system.js" type="text/javascript"></script>
-		<script src="../../py/system/algorithm/sorter/sort.js" type="text/javascript"></script>
-		<script src="../../py/system/algorithm/sorter/quicksort.js" type="text/javascript"></script>
-		<script src="../../py/system/algorithm/sorter/shell.js" type="text/javascript"></script>
+		<script src="../../py/system/core/ioptions.js" type="text/javascript"></script>
+		<script src="../../py/system/core/idatastore.js" type="text/javascript"></script>
 		
 		<script src="../../common/project/project.js" type="text/javascript"></script>
 		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
@@ -14,11 +13,23 @@
 	</head>
 	<body>
 		<script>
+			
+			
 			var fns = [
-				["Sorter.sort", function(){ return Sorter.sort([1,3,5,4,3]); }],
-				["Sorter.quickSort", function(){ return Sorter.quickSort([1,3,5,4,3]); }],
-				["Sorter.shell", function(){ return Sorter.shell([1,3,5,4,3]); }]
+				["IOptions", function(){
+					var CLS = new Class().implement(IOptions);
+					var a = new CLS();
+					a.setOptions('a', 2);
+					return a.a;
+				 }],
+				["IDataStore", function(){
+					var CLS = new Class().implement(IDataStore);
+					var a = new CLS();
+					a.setData('f', 2);
+					return a.getDataIf   ('f');
+				}]
 			];
+			
 		</script>
 	</body>
 </html>
