--- a/test/core/date.html
+++ b/test/core/date.html
@@ -4,8 +4,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>System.Core.Date  测试</title>
 		<script src="../../py/system.js" type="text/javascript"></script>
-		<script src="../../py/System/Core/Date.js" type="text/javascript"></script>
-		<script src="../../py/System/Core/DateEx.js" type="text/javascript"></script>
+		<script src="../../py/system/core/date.js" type="text/javascript"></script>
+		<script src="../../py/system/core/dateex.js" type="text/javascript"></script>
 		
 		<script src="../../common/project/project.js" type="text/javascript"></script>
 		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
