--- a/test/core/number.html
+++ b/test/core/number.html
@@ -2,11 +2,9 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>System.Algorithm.Encryption.Md5  测试</title>
+		<title>Pyjs 测试</title>
 		<script src="../../py/system.js" type="text/javascript"></script>
-		<script src="../../py/system/algorithm/sorter/sort.js" type="text/javascript"></script>
-		<script src="../../py/system/algorithm/sorter/quicksort.js" type="text/javascript"></script>
-		<script src="../../py/system/algorithm/sorter/shell.js" type="text/javascript"></script>
+		<script src="../../py/system/core/number.js" type="text/javascript"></script>
 		
 		<script src="../../common/project/project.js" type="text/javascript"></script>
 		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
@@ -14,11 +12,14 @@
 	</head>
 	<body>
 		<script>
+			
+			
 			var fns = [
-				["Sorter.sort", function(){ return Sorter.sort([1,3,5,4,3]); }],
-				["Sorter.quickSort", function(){ return Sorter.quickSort([1,3,5,4,3]); }],
-				["Sorter.shell", function(){ return Sorter.shell([1,3,5,4,3]); }]
+				["", function(){
+					
+				 }]
 			];
+			
 		</script>
 	</body>
 </html>
