--- a/test/tools/javascript.html
+++ b/test/tools/javascript.html
@@ -23,41 +23,17 @@
 				 
 			}
 			
-			function a(obj, prop){
-				return obj[prop] || (obj[prop] == {});
-			}
-			
-			var i = 100000;
-			var date = new Date();
-			while (i--) {
-				d = {};
-				e = a(d, 'p');
-			}
-			date = new Date() - date;
-			
-			
-			var i = 100000;
-			var date4 = new Date();
-			while(i--) {
-				d = {};
-				e =d.p || (d.p == {});
-			}
-			date4 = new Date() - date4;
-			
-			alert(date + "  " + date4);
-		
 		</script>
 		
 	</head>
 	<body>
 		
-		<button onclick="">aa</button>
 		
-		
-		
-		
-		<div style="position: absolute; height: 300px; width: 300px;  background: yellow;" id="a">
-		  <div style="position: absolute; right:0; height: 100%; width: 40px; background: blue;" id="b"></div>
+		<div style="height: 100px; background: yellow; float: left;">
+			a
+		</div>
+		<div style="height: 100px; background: #023454;float: right">
+			n
 		</div>
 		
 		
