--- a/test/ajax/ajax.html
+++ b/test/ajax/ajax.html
@@ -4,29 +4,30 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>System.Ajax.Ajax  测试</title>
         <script src="../../py/system.js" type="text/javascript"></script>
-        <script src="../../py/System/Ajax/Ajax.js" type="text/javascript"></script>
+        <script src="../../py/system/ajax/ajax.js" type="text/javascript"></script>
 		
-        <script src="../assets/scripts/debug.js" type="text/javascript"></script>
-        <script src="../assets/scripts/test.js" type="text/javascript"></script>
+		<script src="../../common/project/project.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/debug.js" type="text/javascript"></script>
     </head>
     <body>
         <script>
-            var url = './ajax.html';
+            var url = './ajax.html.';
             var ajax = new Ajax({
                 url: url,
                 onsuccess: function(m){
                     log(m);
                 },
                 data: {
-                    "asd": "个"
+                    "d1": "内容"
                 },
                 oncomplete: function(m){
-                    log(m);
+                    log("finish->" + m);
                 },
                 onerror: trace.error,
                 ontimeout: log
             });
-            var fns = [["ajax", function(){
+            var fns = [["Ajax.prototype.send", function(){
                 ajax.send();
             }], ["ajax.get", function(){
                 Ajax.get(url, {
