--- a/test/ajax/ajax.html
+++ b/test/ajax/ajax.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>System.Ajax.Ajax  测试</title>
+        <title>System.Ajax  测试</title>
         <script src="../../py/system.js" type="text/javascript"></script>
         <script src="../../py/system/ajax/ajax.js" type="text/javascript"></script>
 		
