--- a/test/broswer/querystring.html
+++ b/test/broswer/querystring.html
@@ -2,25 +2,19 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>System.Dom.Element  测试</title>
+		<title>System.Broswer  测试</title>
 		<script src="../../py/system.js" type="text/javascript"></script>
-		<script src="../../py/system/dom/element.js" type="text/javascript"></script>
-		<script src="../../py/system/dom/selection.js" type="text/javascript"></script>
+		<script src="../../py/system/broswer/querystring.js" type="text/javascript"></script>
 		
 		<script src="../../common/project/project.js" type="text/javascript"></script>
 		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
 		<script src="../../common/assets/scripts/debug.js" type="text/javascript"></script>
 	</head>
-	<body> 
-		<input type="text" value="abcdefg" id="a">
-		
-		<textarea id="b">abcdefg</textarea>
-			<hr>
+	<body>
 		<script>
 			var fns = [
-				["Element.select", function(){Element.select($('a'),1, 2)}],
-				["Element.select", function(){Element.select($('b'),1, 2)}]
-			]
+				["location.queryString", function(){ return location.queryString; }],
+			];
 		</script>
 	</body>
 </html>
