--- a/trunk/ui/container/panel.html
+++ b/trunk/ui/container/panel.html
@@ -118,7 +118,7 @@
 					html: '<div><u>内容</u></div>',
 					size: {x:333,y:232},
 					renderTo: document.body,
-					collapseItem: true
+					collapsable: true
 				}).setDraggable(true)
 					.renderTo(document.body)
 					;
