--- a/trunk/ui/container/window.html
+++ b/trunk/ui/container/window.html
@@ -19,13 +19,14 @@
 		<script src="../../py/system/controls/control.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/layout/layoutEngine.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/layout/flowLayout.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/contentcontrol.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/scrollablecontrol.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/containercontrol.js" type="text/javascript"></script>
-		<script src="../../py/system/controls/icontainercontrol.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/iparentcontrol.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/surround.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/shadow.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/resizing.js" type="text/javascript"></script>
-		<script src="../../py/system/controls/window.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/dialog.js" type="text/javascript"></script>
 		
 		<script src="../../py/system/controls/box.js" type="text/javascript"></script>
 		<script src="../../common/project/project.js" type="text/javascript"></script>
@@ -86,11 +87,12 @@
 					
         <script>
      
-	 
-  var wn = new Window({
+  var
+  
+   wn = new Dialog({
   				title: '内容',
                 html: '内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容 内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容 内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容 内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容 内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容 内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容 内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容 内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容 内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容 内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容 内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容 内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容 内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容 内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容'
-           }).show();
+           }) .show();
 
 
 
