--- a/test/dom/position.html
+++ b/test/dom/position.html
@@ -37,6 +37,7 @@
 				["Document.prototype.getOffsetParent", function(){ return document.getOffsetParent(); }],
 				["Document.prototype.getOffsets", function(){ return document.getOffsets(); }],
 				["Document.prototype.getPosition", function(){ return document.getPosition(); }],
+				["Element.getBorders", function(){return Element.getBorders(a, 'width', 'm');}],
 				["全部测试", function(){
 					log("Size = ", f.getSize());
 					log("------------------------","");
