--- a/test/core/chineseid.html
+++ b/test/core/chineseid.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>Pyjs 测试</title>
+        <title>Core</title>
         <script src="../../py/system.js" type="text/javascript"></script>
 		<script src="../../py/system/core/chineseid.js" type="text/javascript"></script>
 		
@@ -14,7 +14,7 @@
         <script>
             
             var fns = [
-				["Check.isChineseId", function() { return Check.isChineseId("122134213123123123123")}]
+				["Check.checkId", function() { return Check.checkId("122134213123123123123")}]
 			];
             
         </script>
