--- a/test/core/core.html
+++ b/test/core/core.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Pyjs 测试</title>
+		<title>Core</title>
 		<script src="../../py/core.js" type="text/javascript"></script>
 		
 		<script src="../../common/project/project.js" type="text/javascript"></script>
@@ -12,6 +12,8 @@
 	<body>
 		<script>
 			
+			
+			trace(window.Py && ' 状态正常   ');
 			
 			
 		</script>
