--- a/test/core/navigator.html
+++ b/test/core/navigator.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Pyjs 测试</title>
+		<title>Core</title>
 		<script src="../../py/system.js" type="text/javascript"></script>
 
 		<script src="../../common/project/project.js" type="text/javascript"></script>
@@ -12,8 +12,8 @@
 	<body>
 		<script>
 			var fns = [
-				["navigator.browser", function(){return navigator.browser;}, true],
-				["navigator.version", function(){return navigator.version;}, true],
+				["navigator.browser", function(){assert(navigator.browser);   return navigator.browser;}, true],
+				["navigator.version", function(){assert(navigator.version);   return navigator.version;}, true],
 				["navigator", function(){return navigator;}, true]
 			];
 		
