--- a/test/data/collection.html
+++ b/test/data/collection.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Pyjs 测试</title>
+		<title>Core</title>
 		<script src="../../py/system.js" type="text/javascript"></script>
-		<script src="../../py/system/data/collectionbase.js" type="text/javascript"></script>
-		<script src="../../py/system/data/collectionbaseex.js" type="text/javascript"></script>
+		<script src="../../py/system/data/collection.js" type="text/javascript"></script>
+		<script src="../../py/system/data/collectionex.js" type="text/javascript"></script>
 		
 		<script src="../../common/project/project.js" type="text/javascript"></script>
 		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
@@ -14,7 +14,7 @@
 	<body>
 		<script>
 			
-			var list = new CollectionBase();
+			var list = new Collection();
 			list.add(2);
 			list.insert(0, 2);
 			list.remove(2);
