--- a/test/dom/event.html
+++ b/test/dom/event.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>System.Dom.Element  测试</title>
+		<title>Dom</title>
 		<script src="../../py/system.js" type="text/javascript"></script>
 		<script src="../../py/system/dom/element.js" type="text/javascript"></script>
 		
@@ -12,19 +12,17 @@
 	</head>
 	<body> 
 		<div style="background: yellow;" id="a">
-				<div style="background: red; width:200px;" id="aa">id=aa<div style="background: black; color:white" id="aba">id=aba</div></div>
-				<div style="background: green;" id="ab">id=ab<input type="button" name="button" id="button" value="子控件" /></div>
-			</div>
-			<hr>
+			<div style="background: red; width:200px;" id="aa">id=aa<div style="background: black; color:white" id="aba">id=aba</div></div>
+			<div style="background: green;" id="ab">id=ab<input type="button" name="button" id="button" value="子控件" /></div>
+		</div>
+		<hr>
 		<script>
 			var a = $('a'), aa = $('aa'), aaa = $('aa'), ab = $('ab'), s = new ElementList([ab, aaa]);
 			var fns = [
 				["Element.prototype.on", function(){ return a.on('click', log); }],
 				["Element.prototype.un", function(){ return a.un('click'); }],
 				["Element.prototype.trigger", function(){ return a.trigger('click'); }],
-				["Element.prototype.one", function(){ 
-					return a.one('click', log) ;
-				 }]
+				["Element.prototype.one", function(){ return a.one('click', log) ;}]
 			];
 		</script>
 	</body>
