--- a/test/dom/memleak.html
+++ b/test/dom/memleak.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>System.Dom.Element  测试</title>
+		<title>Dom</title>
 		<script src="../../py/system.js" type="text/javascript"></script>
 		<script src="../../py/system/dom/element.js" type="text/javascript"></script>
 		
@@ -17,10 +17,12 @@
 			</div>
 			<hr>
 		<script>
-var a = document.getElementById('button');
+				var a = document.getElementById('button');
 			var fns = [
 				["Mem", function(){
- 					document.createElement("div", true)
+					var obj = {};
+ 					obj. v  = document.createElement("div", true);
+ 					obj. v.g = obj;
 				 }]
 			];
 
