--- a/test/broswer/clipboard.html
+++ b/test/broswer/clipboard.html
@@ -13,8 +13,8 @@
 	<body>
 		<script>
 			var fns = [
-				["Clipboard.getData", function(){ return Clipboard.getData(); }],
-				["Clipboard.setData", function(){ return Clipboard.setData('sdf'); }]
+				["Clipboard.getText", function(){ return Clipboard.getText(); }],
+				["Clipboard.setText", function(){ return Clipboard.setText('sdf'); }]
 			];
 		</script>
 	</body>
