--- a/trunk/ui/control/mask.html
+++ b/trunk/ui/control/mask.html
@@ -24,7 +24,7 @@
 		
 		
 		<script>
-			var mask=new Mask().setTarget($('tg')).setContent('Loading');
+			var mask=new Mask().renderTo($('tg')).setText('Loading');
 		</script>
     </body>
 </html>
