--- a/trunk/ui/control/shadow.html
+++ b/trunk/ui/control/shadow.html
@@ -40,13 +40,10 @@
 
 	<script>
 			
-			document.ready(function(){
 				
-				$('shadow_frame').setShadow();
+			$('shadow_frame').setShadow();
 				
-				$('shadow_drop').setShadow(true);
-			
-			});
+			$('shadow_drop').setShadow('rb');
 			
 			
 		</script>
