--- a/trunk/ui/dialog/balloonbox.html
+++ b/trunk/ui/dialog/balloonbox.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>文本编辑</title>
+        <title>Form</title>
          <link href="../../py/resources/share/control/core.css" rel="stylesheet" type="text/css" />
 		<link href="../../py/resources/share/container/window.css" rel="stylesheet" type="text/css" />
 		<link href="../../py/resources/default/control/core.css" rel="stylesheet" type="text/css" />
