--- a/trunk/ui/button/menubutton.html
+++ b/trunk/ui/button/menubutton.html
@@ -2,18 +2,25 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>文本编辑</title>
+        <title>Form</title>
         <link href="../../py/resources/share/control/core.css" rel="stylesheet" type="text/css" />
 		<link href="../../py/resources/default/control/core.css" rel="stylesheet" type="text/css" />
+		<link href="../../py/resources/default/control/icons.css" rel="stylesheet" type="text/css" />
+		
 		<link href="../../py/resources/share/button/button.css" rel="stylesheet" type="text/css" />
         <link href="../../py/resources/default/button/button.css" rel="stylesheet" type="text/css" />
 		
+		<link href="../../py/resources/share/form/menubuttons.css" rel="stylesheet" type="text/css" />
+		<link href="../../py/resources/default/form/menubuttons.css" rel="stylesheet" type="text/css" />
+		
         <script src="../../py/system.js" type="text/javascript"></script>
-		<script src="../../py/system/data/collectionbase.js" type="text/javascript"></script>
+		<script src="../../py/system/data/collection.js" type="text/javascript"></script>
 		<script src="../../py/system/dom/element.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/control.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/iformcontrol.js" type="text/javascript"></script>
-		<script src="../../py/system/controls/textbox.js" type="text/javascript"></script>
-		<script src="../../py/system/controls/combinedtextbox.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/contentcontrol.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/button.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/menubutton.js" type="text/javascript"></script>
 		
 		<script src="../../common/project/project.js" type="text/javascript"></script>
 		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
@@ -26,6 +33,11 @@
 			function changeState(value){
 				this.parentNode.parentNode.className = value ? this.parentNode.parentNode.className + ' x-active' : this.parentNode.parentNode.className.replace(/ x\-active/g, "") ;
 			}
+			
+			new MenuButton({
+				dropDownMenu: Element.parse("<div>下拉菜单</div>").renderTo().setStyle('position', 'absolute'),
+				renderTo: true
+			});
 			
 		</script>
 		
