--- a/trunk/ui/button/splitbutton.html
+++ b/trunk/ui/button/splitbutton.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>文本编辑</title>
+        <title>Form</title>
         <link href="../../py/resources/share/control/core.css" rel="stylesheet" type="text/css" />
 		<link href="../../py/resources/default/control/core.css" rel="stylesheet" type="text/css" />
 		<link href="../../py/resources/default/button/button.css" rel="stylesheet" type="text/css" />
@@ -11,9 +11,12 @@
         <script src="../../py/system.js" type="text/javascript"></script>
 		<script src="../../py/system/data/collectionbase.js" type="text/javascript"></script>
 		<script src="../../py/system/dom/element.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/control.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/iformcontrol.js" type="text/javascript"></script>
-		<script src="../../py/system/controls/textbox.js" type="text/javascript"></script>
-		<script src="../../py/system/controls/combinedtextbox.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/contentcontrol.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/button.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/menubutton.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/splitbutton.js" type="text/javascript"></script>
 		
 		<script src="../../common/project/project.js" type="text/javascript"></script>
 		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
@@ -24,6 +27,12 @@
 			function changeState(cls){
 				this.parentNode.parentNode.className = cls ? this.parentNode.parentNode.className + ' ' + cls : this.parentNode.parentNode.className.replace(/ x\-active(.sub)?/g, "") ;
 			}
+			
+			new SplitButton({
+				text: 'aaa',
+				dropDownMenu: Element.parse("<div>下拉菜单</div>").renderTo().setStyle('position', 'absolute'),
+				renderTo: true
+			});
 			
 		</script>
 		
