--- a/trunk/ui/container/contentcontrol.html
+++ b/trunk/ui/container/contentcontrol.html
@@ -2,10 +2,9 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>容器控件</title>
+        <title>Container</title>
 		<link href="../../py/resources/share/control/core.css" rel="stylesheet" type="text/css" />
         <link href="../../py/resources/default/control/core.css" rel="stylesheet" type="text/css" />
-		<link href="../../py/resources/share/layout/flow.css" rel="stylesheet" type="text/css" />
 		
         <script src="../../py/system.js" type="text/javascript"></script>
 		<script src="../../py/system/dom/element.js" type="text/javascript"></script>
