--- a/trunk/ui/container/panel.html
+++ b/trunk/ui/container/panel.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>面板</title>
+        <title>Container</title>
         <link href="../../py/resources/share/control/core.css" rel="stylesheet" type="text/css" />
         <link href="../../py/resources/share/container/panel.css" rel="stylesheet" type="text/css" />
 		<link href="../../py/resources/default/control/core.css" rel="stylesheet" type="text/css" />
@@ -16,9 +16,9 @@
 		<script src="../../py/system/controls/control.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/contentcontrol.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/scrollablecontrol.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/scrollablecontrolex.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/containercontrol.js" type="text/javascript"></script>
 		<script src="../../py/system/controls/panel.js" type="text/javascript"></script>
-		<script src="../../py/system/controls/panelex.js" type="text/javascript"></script>
 		
 		<script src="../../py/system/fx/base.js" type="text/javascript"></script>
 		<script src="../../py/system/fx/animate.js" type="text/javascript"></script>
@@ -109,7 +109,6 @@
 		<hr>
 		<script>
 			
-			Py.ready(function(){
 			
 			
 			
@@ -123,7 +122,8 @@
 					.renderTo(document.body)
 					;
 			
-			});
+		
+
 			
 		</script>
     </body>
