--- a/trunk/ui/form/searchtextbox.html
+++ b/trunk/ui/form/searchtextbox.html
@@ -2,28 +2,37 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>文本编辑</title>
+        <title>Form</title>
         <link href="../../py/resources/share/control/core.css" rel="stylesheet" type="text/css" />
 		<link href="../../py/resources/share/form/textbox.css" rel="stylesheet" type="text/css" />
         <link href="../../py/resources/default/control/core.css" rel="stylesheet" type="text/css" />
 		<link href="../../py/resources/default/control/icons.css" rel="stylesheet" type="text/css" />
 		<link href="../../py/resources/default/form/textbox.css" rel="stylesheet" type="text/css" />
+		
+		<link href="../../py/resources/share/form/menubuttons.css" rel="stylesheet" type="text/css" />
 		<link href="../../py/resources/default/form/menubuttons.css" rel="stylesheet" type="text/css" />
 		
 		<script src="../../py/system.js" type="text/javascript"></script>
-		<script src="../../py/System/dom/element.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/IFormControl.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/TextBoxBase.js" type="text/javascript"></script>
-		<script src="../../py/System/Controls/SearchTextBox.js" type="text/javascript"></script>
+		<script src="../../py/system/dom/element.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/control.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/iformcontrol.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/textbox.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/combinedtextbox.js" type="text/javascript"></script>
+		<script src="../../py/system/controls/searchtextbox.js" type="text/javascript"></script>
 		
-		<script src="../assets/scripts/ui.js" type="text/javascript"></script>
-		<script src="../assets/scripts/common.js" type="text/javascript"></script>
+		<script src="../../common/project/project.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/debug.js" type="text/javascript"></script>
 		
 		<script>
+			
+			document.onReady(function(){
 			
 			a =  new SearchTextBox({
 				renderTo: true
 			})
+			
+			});
 			
 		</script>
     </head>
