--- a/trunk/ui/form/textbox.html
+++ b/trunk/ui/form/textbox.html
@@ -2,10 +2,9 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>文本编辑</title>
+        <title>Form</title>
         <link href="../../py/resources/share/control/core.css" rel="stylesheet" type="text/css" />
 		<link href="../../py/resources/default/control/core.css" rel="stylesheet" type="text/css" />
-		<link href="../../py/resources/default/control/icons.css" rel="stylesheet" type="text/css" />
 		<link href="../../py/resources/share/form/textbox.css" rel="stylesheet" type="text/css" />
         <link href="../../py/resources/default/form/textbox.css" rel="stylesheet" type="text/css" />
 		
