--- a/trunk/ui/container/accordion.html
+++ b/trunk/ui/container/accordion.html
@@ -5,6 +5,7 @@
         <title>Container</title>
         <link href="../../py/resources/share/control/core.css" rel="stylesheet" type="text/css" />
         <link href="../../py/resources/default/control/core.css" rel="stylesheet" type="text/css" />
+		<link href="../../py/resources/default/control/icons.css" rel="stylesheet" type="text/css" />
 		<link href="../../py/resources/share/container/accordion.css" rel="stylesheet" type="text/css" />
         <link href="../../py/resources/default/container/accordion.css" rel="stylesheet" type="text/css" />
        
@@ -44,7 +45,7 @@
     <body>
 		<div style="width: 300px; margin: 5px;" class="x-accordion" id="accordion">
 			<div class="x-header x-accordion-header">
-				<h3 class="">面板1</h3>
+				<h3>面板1</h3>
 			</div>
 			<div style="height: 201px; display: none;" class="x-container x-accordion-container">
 				内容1
