--- a/trunk/ui/container/panel.html
+++ b/trunk/ui/container/panel.html
@@ -35,9 +35,9 @@
                 <div class="x-header x-panel-header">
                     <div class="x-header-container">
                     	<div class="x-header-content">
-                    		<a class="x-icon x-icon-win"></a>
+                    		<a class="x-icon x-icon-layout"></a>
                     		<h3>
-                    			<span class="x-icon x-icon-win"></span>
+                    			<span class="x-icon x-icon-layout"></span>
 								标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题</h3>
 							</div>
                     </div>
