--- a/trunk/ui/button/button.html
+++ b/trunk/ui/button/button.html
@@ -20,12 +20,8 @@
 		<script src="../../common/assets/scripts/debug.js" type="text/javascript"></script>
 		
 		<script>
-			
-			
-			function changeState(value){
-				this.parentNode.parentNode.className = value ? this.parentNode.parentNode.className + ' x-active' : this.parentNode.parentNode.className.replace(/ x\-active/g, "") ;
-			}
-			
+		
+		
 			
 			new Button({
 				text: '2222323',
@@ -72,31 +68,33 @@
 			<button>按钮</button>
 			<a class="x-button">
 				<span class="x-button-container">
-					<button  onmousedown="changeState.call(this, true); " onmouseup="changeState.call(this, false); " type="button" onclick="this.firstChild.innerHTML = '#' + this.firstChild.innerHTML"><span class="x-button-label">按钮</span></button>
+					<span class="x-button-content">
+						<button   type="button" onclick="this.firstChild.innerHTML = '#' + this.firstChild.innerHTML"><span class="x-button-label">按钮</span></button>
+					</span>
 				</span>
 			</a>
 			
 			<a class="x-button">
 				<span class="x-button-container">
-					<button onmousedown="changeState.call(this, true); " onmouseup="changeState.call(this, false); " type="button" onclick="this.firstChild.innerHTML = '#' + this.firstChild.innerHTML"><span class="x-icon x-icon-win"></span><span class="x-button-label">按钮</span></button>
+					<span class="x-button-content">
+						<button   type="button" onclick="this.lastChild.innerHTML = '#' + this.lastChild.innerHTML"><span class="x-icon x-icon-layout"></span><span class="x-button-label">按钮</span></button>
+					</span>
 				</span>
 			</a>
 			
 			<a class="x-button x-checked">
 				<span class="x-button-container">
-					<button onmousedown="changeState.call(this, true); " onmouseup="changeState.call(this, false); " type="button" onclick="this.firstChild.innerHTML = '#' + this.firstChild.innerHTML"><span class="x-button-label">按钮</span></button>
+					<span class="x-button-content">
+						<button   type="button" onclick="this.firstChild.innerHTML = '#' + this.firstChild.innerHTML"><span class="x-button-label">按钮</span></button>
+					</span>
 				</span>
 			</a>
 			
-			<a class="x-button x-default">
+			<a class="x-button x-disbaled">
 				<span class="x-button-container">
-					<button onmousedown="changeState.call(this, true); " onmouseup="changeState.call(this, false); " type="button" onclick="this.firstChild.innerHTML = '#' + this.firstChild.innerHTML"><span class="x-button-label">按钮</span></button>
-				</span>
-			</a>
-			
-			<a class="x-button x-disabled">
-				<span class="x-button-container">
-					<button disabled="disabled" onmousedown="changeState.call(this, true); " onmouseup="changeState.call(this, false); " type="button" onclick="this.firstChild.innerHTML = '#' + this.firstChild.innerHTML"><span class="x-button-label">按钮</span></button>
+					<span class="x-button-content">
+						<button   type="button" onclick="this.firstChild.innerHTML = '#' + this.firstChild.innerHTML" disabled="disabled"><span class="x-button-label">按钮</span></button>
+					</span>
 				</span>
 			</a>
         </div>
