--- a/trunk/ui/button/contextmenu.html
+++ b/trunk/ui/button/contextmenu.html
@@ -34,16 +34,19 @@
 
 <body>
     
-	<div class="x-contextmenustrip">
-		<a class="x-contextmenustrip-handle-top"></a>
-		<ul class="x-list-container x-contextmenustrip-container">
-			<li class="x-list-content x-contextmenustrip-content"><a class="x-contextmenustrip-item"><span class="x-icon x-icon-selected"></span>内容内容试试试试试试</a></li>
-			<li class="x-list-content x-contextmenustrip-content x-active"><a class="x-contextmenustrip-item x-contextmenustrip-item-arrow"><span class="x-icon"></span>内容</a></li>
-			<li class="x-list-content x-contextmenustrip-content"><a class="x-contextmenustrip-item  x-disabled"><span class="x-icon"></span>内容</a></li>
-			<li class="x-list-content x-contextmenustrip-content"><a class="x-split"></a></li>
-			<li class="x-list-content x-contextmenustrip-content">344</li>
+	<div class="x-contextmenu">
+		<a class="x-contextmenu-handle-top"></a>
+		<ul class="x-list-container x-contextmenu-container">
+			<li class="x-list-content x-contextmenu-content">
+				<a class="x-contextmenu-item"><span class="x-icon x-icon-selected"></span>内容内容试试试试试试
+				</a>
+			</li>
+			<li class="x-list-content x-contextmenu-content x-active"><a class="x-contextmenu-item x-contextmenu-item-arrow"><span class="x-icon"></span>内容啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</a></li>
+			<li class="x-list-content x-contextmenu-content"><a class="x-contextmenu-item  x-disabled"><span class="x-icon"></span>内容</a></li>
+			<li class="x-list-content x-contextmenu-content"><a class="x-split"></a></li>
+			<li class="x-list-content x-contextmenu-content">344</li>
 		</ul>
-		<a class="x-contextmenustrip-handle-bottom"></a>
+		<a class="x-contextmenu-handle-bottom"></a>
 	</div>
 	
 	
