--- a/trunk/ui/theme/css.html
+++ b/trunk/ui/theme/css.html
@@ -120,16 +120,10 @@
         <link href="../../py/resources/default/viewer/tooltip.css" rel="stylesheet" type="text/css" />
        
 		
-
-		<!--  -->
-
-		<script src="../../common/project/project.js" type="text/javascript"></script>
-		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
-
 		<style type="text/css">
 			.block {
 				float: left;
-				margin: 8px;
+				margin: 8px; 
 			}
 
 			.blue {
@@ -165,6 +159,12 @@
 				padding-left: 7px;
 			}
 		</style>
+
+		<!--  -->
+
+		<script src="../../common/project/project.js" type="text/javascript"></script>
+		<script src="../../common/assets/scripts/default.js" type="text/javascript"></script>
+
 	</head>
 
 	<body>
@@ -206,7 +206,7 @@
 					<a class="x-button">
 					<span class="x-button-container">
 						<button onmousedown="changeState.call(this, true); " onmouseup="changeState.call(this, false); " type="button" onclick="this.firstChild.innerHTML = '#' + this.firstChild.innerHTML">
-							<span class="x-icon x-icon-win"></span>
+							<span class="x-icon x-icon-layout"></span>
 							<span class="x-button-label">按钮</span>
 						</button>
 					</span>
@@ -558,9 +558,9 @@
                 <div class="x-header x-panel-header">
                     <div class="x-header-container">
                     	<div class="x-header-content">
-                    		<a class="x-icon x-icon-win"></a>
+                    		<a class="x-icon x-icon-layout"></a>
                     		<h3>
-                    			<span class="x-icon x-icon-win"></span>
+                    			<span class="x-icon x-icon-layout"></span>
 								标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题</h3>
 							</div>
                     </div>
@@ -623,8 +623,8 @@
                         <ul class="x-list-container x-tabcontrols-header-container">
                             <li class="x-list-content x-tabcontrols-header-content" style="*width:100px;  *height:23px;">
                                 <div>
-                                	<h3><span class="x-icon x-icon-win"></span>标题1
-                                	<a class="x-icon x-icon-win"></a></h3>
+                                	<h3><span class="x-icon x-icon-layout"></span>标题1
+                                	<a class="x-icon x-icon-layout"></a></h3>
 								</div>
                             </li>
                             <li class="x-list-content x-tabcontrols-header-content">
@@ -665,8 +665,8 @@
                         <ul class="x-list-container x-tabcontrols-header-container">
                             <li class="x-list-content x-tabcontrols-header-content" style="*width:100px;  *height:23px;">
                                 <div>
-                                	<h3><span class="x-icon x-icon-win"></span>标题1
-                                	<a class="x-icon x-icon-win"></a></h3>
+                                	<h3><span class="x-icon x-icon-layout"></span>标题1
+                                	<a class="x-icon x-icon-layout"></a></h3>
 								</div>
                             </li>
                             <li class="x-list-content x-tabcontrols-header-content">
